@@ -1,4 +1,10 @@
-/* $Id: ChangeLog,v 1.1666 2001-08-31 00:20:04 phaller Exp $ */
+/* $Id: ChangeLog,v 1.1667 2001-08-31 19:46:45 phaller Exp $ */
+
+ 2001-08-31: Patrick Haller <patrick.haller@innotek.de>
+    - KERNEL32: o Fix in MoveFileExW, MoveFileExA prevents stack corruption
+                  in MS ACMSETUP
+    - USER32:   o Fix in UnregisterClass for never reaching the destructor
+                  of Win32class. ACMSETUP now working.
 
  2001-08-30: Patrick Haller <patrick.haller@innotek.de>
     - SHLWAPI:  o Improvements on ordinal functions
